--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,14 +12,14 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./backend/db/db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
+      - ./backend/src/db/db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U konstantin -d Calorie-Tracker" ]
       interval: 5s
       timeout: 5s
       retries: 5
   backend:
-    image: ghcr.io/konstantin-lozanovski/calorie-tracker:1.0
+    image: ghcr.io/konstantin-lozanovski/calorie-tracker:1.1
     restart: always
     env_file:
       - backend/.env
