--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Build & maybe push
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: image-name
+          image: calorie-tracker
           registry: ghcr.io
-          githubOrg: your-username
+          githubOrg: konstantin-lozanovski
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           pushImage: ${{ github.event_name == 'push' }}
