Changed the user and password

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: "konstantin"
-      POSTGRES_PASSWORD: "konstantin2004"
-      POSTGRES_DB: "Calorie-Tracker"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5433:5432"
     volumes:
