--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,11 +5,11 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: "konstantin"
+      POSTGRES_PASSWORD: "konstantin2004"
+      POSTGRES_DB: "Calorie-Tracker"
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./backend/src/db/db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
