--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -19,7 +19,7 @@ services:
       timeout: 5s
       retries: 5
   backend:
-    image: ghcr.io/konstantin-lozanovski/calorie-tracker:1.3
+    build: ./backend
     restart: always
     env_file:
       - backend/.env
