Changed the url for the image from ghcr.io

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       timeout: 5s
       retries: 5
   backend:
-    image: ghcr.io/konstantin-lozanovski/calorie-tracker:1.3
+    image: ghcr.io/konstantin-lozanovski/calorie-tracker:3c4a67da763b6062aa6dfb1ce5de8af4aa72f1c3
     restart: always
     env_file:
       - backend/.env
